table elements have non-standard "display" properties by default, this was preventing the shuttle stop rows from being properly truncated/ellipsized.

--- a/mobi-web/shuttleschedule/Webkit/shuttletrack.css
+++ b/mobi-web/shuttleschedule/Webkit/shuttletrack.css
@@ -32,6 +32,11 @@
 	background-position: 3px 3px;
 }
 
+/* required so that the text-overflow property of ellipsis is not ignored */
+table, tbody, td, tr {
+       display: block;
+}
+
 .sid {
 	display: inline-block;
 	width: 18px;
